--- a/demo.html
+++ b/demo.html
@@ -16,21 +16,37 @@
   <div ng-app="myAppModule" ng-controller="mainCtrl">
     <!-- Show the name in the browser -->
     <h1>Welcome {{ name }}</h1>
-
-    <p>Created by : {{ userName }}</p>
     <!-- Bind the input to the name -->
     <input ng-model="name" name="name" placeholder="Enter your name" />
   </div>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
   <script src="./dist/elevio.js"></script>
   <script>
     angular.module('myAppModule', ['elevio'])
     .config(['ElevioProvider', function(ElevioProvider) {
-      ElevioProvider.init('xxxxxxxxxxxxx');
+      ElevioProvider.init('xxxxxxxxxxx'); // You can find your account id from your settings page
     }])
     .controller('mainCtrl', ['$scope', 'Elevio', function($scope, Elevio) {
-      $scope.userName = "jbender";
       Elevio.boot();
+      /*
+      // Set user information
+      Elevio.setUser({
+        first_name: 'John',
+        last_name: 'Due',
+        email: 'john@example.com',
+        user_hash: 'yyyyyyyyyy', // for help generating this, see: https://elev.io/documentation#user-hash
+        groups: 'gold'
+      });
+      */
+
+      /*
+      // Override settings
+      Elevio.override('main_color', 'red');
+      Elevio.override('side', 'left');
+      Elevio.override('docked_position', 'floor');
+      Elevio.override('theme', 'light');
+      Elevio.override('tab_teaser', 'Hi John, need a hand?');
+      */
     }]);
   </script>
 </body>
