Prefer https if a protocol must be specified

--- a/demo.html
+++ b/demo.html
@@ -19,7 +19,7 @@
     <!-- Bind the input to the name -->
     <input ng-model="name" name="name" placeholder="Enter your name" />
   </div>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
   <script src="./dist/elevio.js"></script>
   <script>
     angular.module('myAppModule', ['elevio'])
